# braiins

open/bosminer/: .gitignore
open/bosminer/bosminer/: Cargo.toml
open/bosminer/bosminer-config/: Cargo.toml
open/bosminer/bosminer-macros/: Cargo.toml
open/bosminer/bosminer/src/client/: drain.rs  stratum_v2.rs  stratum_v2_channels.rs
open/bosminer/bosminer/src/client/stratum_v2/: telemetry.rs
open/coins/bitcoin/: Cargo.toml
open/coins/bitcoin/src/: hash_test.rs  lib.rs
open/protocols/stratum/: Cargo.toml
open/protocols/stratum/src/test_utils/: v2.rs
open/protocols/stratum/src/v2/: types.rs
open/protocols/stratum/src/v2/noise/: auth.rs
open/protocols/stratum/src/v2/noise/auth/: formats.rs
open/stratum-proxy/: Cargo.toml
open/stratum-proxy/src/: server.rs  translation.rs
open/stratum-proxy/src/translation/: test.rs
open/utils-rs/failure/failure_derive/: Cargo.toml
