[package]
name = "bosminer-config"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
clap = "2.33.3"
config = "0.11.0"
failure = "0.1.8"
serde = { version = "1.0.130", features = ["derive"] }
url = "2.2.2"
ii-stratum = { path = "../../protocols/stratum" }
