[package]
name = "bosminer"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-cgminer-api = { path = "../../protocols/cgminer-api" }
ii-logging = { path = "../../utils-rs/logging" }
ii-stats = { path = "../../utils-rs/stats" }
ii-stratum = { path = "../../protocols/stratum" }
ii-stratum-proxy = { path = "../../stratum-proxy" }
ii-wire = { path = "../../protocols/wire" }
async-trait = "0.1.51"
failure = "0.1.8"
once_cell = "1.8.0"
downcast-rs = "1.2.0"
hex = "0.4.3"
git-version = "0.3.5"
atomic_enum = "0.1.1"
