[package]
name = "ii-bitcoin"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
bytes = "1.1.0"
bitcoin_hashes = "0.10.0"
lazy_static = "1.4.0"
uint = "0.9.1"
